Update on Navbar and Main

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Listening is everything</title>
+    <link href="http://fonts.cdnfonts.com/css/circular-std-book" rel="stylesheet">
+    <title>Listening is everything - Spotify</title>
   </head>
   <body>
     <div id="root"></div>
