Updates on Footer

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,16 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="http://fonts.cdnfonts.com/css/circular-std-book" rel="stylesheet">
+    <link
+      href="http://fonts.cdnfonts.com/css/circular-std-book"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
+    />
     <title>Listening is everything - Spotify</title>
   </head>
   <body>
